apps/irc/soju-service.yml
apiVersion: v1
kind: Service
metadata:
  name: soju
  namespace: irc
spec:
  selector:
    app: soju
  ports:
    - name: ircs
      port: 6697
      targetPort: 6697
      protocol: TCP
    - name: ident
      port: 113
      targetPort: 113
      protocol: TCP
